kafka codes added

--- a/fr.tp.inf112.projects.robotsim/.classpath
+++ b/fr.tp.inf112.projects.robotsim/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="C:/Users/22863/.m2/repository/com/fasterxml/jackson/core/jackson-annotations/2.17.1/jackson-annotations-2.17.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/22863/.m2/repository/com/fasterxml/jackson/core/jackson-core/2.17.1/jackson-core-2.17.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/22863/.m2/repository/com/fasterxml/jackson/core/jackson-databind/2.17.1/jackson-databind-2.17.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/22863/Desktop/git/robotic-factory-simulator/fr.tp.inf112.projects.robotsim/libs/kafka-clients-3.9.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
